# upratham-digital-twin

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
data/: summary.txt
notebooks/: 3_lab3.ipynb  4_lab4.ipynb  5_extra.ipynb
src/logger/: __init__.py
