[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "upratham-digital-twin"
version = "0.1.0"
description = "Digital twin project."
readme = "README.md"
requires-python = ">=3.10"
authors = [
	{ name = "Prathamesh Uravane", email = "upratham200@gmail.com" }
]
dependencies = [
	"gradio>=4.0.0",
	"openai>=1.0.0",
	"pydantic>=2.0.0",
	"pypdf>=4.0.0",
	"python-dotenv>=1.0.0",
	"requests>=2.0.0",
	"rich>=13.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
